# graph_correlation_clustering

./: 2SCCExperiment.cpp  CMakeLists.txt  Genetic_3.cpp  NS2CCExperiment.cpp  NonStrict2CCExperiment.cpp  NonStrict3CCExperiment.cpp  NonStrict3CCExperimentSO.cpp  S2CCExperiment.cpp  SemiSupervised2CCExperiment.cpp  SetSemiSupervised2CCExperiment.cpp  Strict2CCExperiment.cpp  main.cpp  readme.md
data/: 2scc_config.json.example  2sscc_config.json.example  ns2cc_config.json.example  ns3cc_config.json.example  s2cc_config.json.example
include/algorithms/: BranchAndBoundAlgorithm.hpp  LocalSearchAlgorithm.hpp  NeighborSplitter.hpp  NeighborhoodAlgorithm.hpp
include/algorithms/non_strict_two_correlation_clustering/: BBAlgorithm.hpp  BBAlgorithmForNS2CC.hpp  LSAlgorithm.hpp  LSAlgorithmForNS2CC.hpp  N1LSAlgorithmForNS2CC.hpp  N1LsAlgorithm.hpp  NAlgorithm.hpp  NAlgorithmForNS2CC.hpp  NNLSAlgorithm.hpp  NNLSAlgorithmForNS2CC.hpp  NSplitter.hpp  NSplitterForNS2CC.hpp  NWithLSAlgorithm.hpp
include/algorithms/strict_two_correlation_clustering/: LSAlgorithmForS2CC.hpp  NAlgorithmForS2CС.hpp  NSplitter.hpp
include/clustering/: BBBinaryClusteringVector.hpp  BBTernaryClusteringVector.cpp  BBTernaryClusteringVector.hpp  BBTripleClusteringVector.hpp  BFBinaryClusteringVector.hpp  BFTernaryClusteringVector.hpp  BinaryClusteringVector.hpp  BoundAndBranchBinaryClusteringVector.hpp  IClustering.hpp  TernaryClusteringVector.hpp  TripleClusteringVector.hpp
include/clustering/factories/: BinaryClusteringFactory.hpp  IClusteringFactory.hpp  TernaryClusteringFactory.hpp  TripleClusteringFactory.hpp
include/common/: CLusteringLabels.hpp  ClusteringLabels.hpp  Constants.hpp  ExperimentParameters.hpp
include/graphs/: AdjacencyMatrixGraph.hpp  IGraph.hpp
include/graphs/factories/: ErdosRenyiRandomGraphFactory.hpp  IGraphFactory.hpp  StackOverflowGraphFactory.hpp
include/solvers/non_strict_three_correlation_clustering/: NonStrict3CcSolver.hpp
include/solvers/non_strict_three_correlation_clustering/clust_algorithms/: BranchAndBounds.hpp  BrutForce.hpp  NeighborhoodWith2LocalSearches.hpp  NeighborhoodWithLocalSearch.hpp  TwoVerticesNeighborhood.hpp  TwoVerticesNeighborhoodWithLocalSearch.hpp  TwoVerticesNeighborhoodWithManyLocalSearches.hpp
include/solvers/non_strict_three_correlation_clustering/common_functions/: LocalSearch.hpp  NeighborSplitter.hpp
include/solvers/non_strict_three_correlation_clustering/genetic_algorithms/: GeneticAlgorithm.hpp  IGeneticAlgorithm.hpp
include/solvers/non_strict_two_correlation_clustering/: NS2CCSolver.cpp  NS2CCSolver.hpp  NonStrict2CCSolver.hpp  info.md
include/solvers/non_strict_two_correlation_clustering/clust_algoritms/: BBAlgorithmForNS2CC.hpp  BranchAndBounds.hpp  BrutForce.hpp  N1LSAlgorithmForNS2CC.hpp  NAlgorithmForNS2CC.hpp  NNLSAlgorithmForNS2CC.hpp  Neighborhood.hpp  NeighborhoodWithManyLocalSearches.hpp  NeighborhoodWithOneLocalSearch.hpp
include/solvers/non_strict_two_correlation_clustering/common_functions/: LSAlgorithmForNS2CC.hpp  LocalSearch.hpp  NSplitterForNS2CC.hpp  NeighborSplitter.hpp
include/solvers/strict_two_correlation_clustering/: NAlgorithmForS2CС.hpp  S2CCSolver.hpp  Strict2CCSolver.hpp
include/solvers/strict_two_correlation_clustering/clust_algorithms/: BBAlgorithmForS2CC.hpp  BranchAndBounds.hpp  BrutForce.hpp  N1LSAlgorithmForS2CC.hpp  NAlgorithmForS2CС.hpp  NNLSAlgorithmForS2CC.hpp  Neighborhood.hpp  NeighborhoodWithManyLocalSearches.hpp  NeighborhoodWithOneLocalSearch.hpp
include/solvers/strict_two_correlation_clustering/common_functions/: LSAlgorithmForS2CC.hpp  LocalSearch.hpp  NSplitterFor2CC.hpp  NeighborSplitter.hpp
include/solvers/two_semi_supervised_correlation_clustering/: SemiSupervised2CCSolver.hpp  Solver2SCC.hpp
include/solvers/two_semi_supervised_correlation_clustering/clust_algorithms/: BBAlgorithmFor2SCC.hpp  BranchAndBounds.hpp  BrutForce.hpp  N1LSAlgorithmFor2SCC.hpp  NAlgorithmFor2SCC.hpp  NNLSAlgorithmFor2SCC.hpp  Neighborhood.hpp  NeighborhoodOfPreClusteringVertices.hpp  NeighborhoodWithManyLocalSearches.hpp  NeighborhoodWithOneLocalSearch.hpp
include/solvers/two_semi_supervised_correlation_clustering/common_functions/: LSAlgorithmFor2SCC.hpp  LocalSearch.hpp  NSplitterFor2SCC.hpp  NeighborSplitter.hpp
include/solvers/two_set_semi_supervised_correlation_clustering/: SetSemiSupervised2CCSolver.hpp
src/algorithms/: BranchAndBoundAlgorithm.cpp  LocalSearchAlgorithm.cpp  NeighborSplitter.cpp  NeighborhoodAlgorithm.cpp
src/algorithms/non_strict_two_correlation_clustering/: BBAlgorithm.cpp  BBAlgorithmForNS2CC.cpp  LSAlgorithm.cpp  LSAlgorithmForNS2CC.cpp  N1LSAlgorithmForNS2CC.cpp  N1LsAlgorithm.cpp  NAlgorithm.cpp  NAlgorithmForNS2CC.cpp  NNLSAlgorithm.cpp  NNLSAlgorithmForNS2CC.cpp  NSplitter.cpp  NSplitterForNS2CC.cpp  NWithLSAlgorithm.cpp
src/algorithms/strict_two_correlation_clustering/: LSAlgorithmForS2CC.cpp  NAlgorithmForS2CС.cpp  NSplitter.cpp  NSplitterFor2CC.cpp
src/clustering/: BBBinaryClusteringVector.cpp  BBTernaryClusteringVector.cpp  BBTripleClusteringVector.cpp  BFBinaryClusteringVector.cpp  BFTernaryClusteringVector.cpp  BinaryClusteringVector.cpp  BoundAndBranchBinaryClusteringVector.cpp  TernaryClusteringVector.cpp  TripleClusteringVector.cpp
src/clustering/factories/: BinaryClusteringFactory.cpp  TernaryClusteringFactory.cpp  TripleClusteringFactory.cpp
src/common/: ExperimentParameters.cpp
src/graphs/: AdjacencyMatrixGraph.cpp
src/graphs/factories/: ErdosRenyiRandomGraphFactory.cpp  StackOverflowGraphFactory.cpp
src/solvers/non_strict_three_correlation_clustering/: NonStrict3CcSolver.cpp
src/solvers/non_strict_two_correlation_clustering/: NS2CCSolver.cpp  NonStrict2CCSolver.cpp
src/solvers/strict_two_correlation_clustering/: LSAlgorithmForS2CC.cpp  NAlgorithmForS2CС.cpp  NSplitterFor2CC.cpp  S2CCSolver.cpp  Strict2CCSolver.cpp
src/solvers/two_semi_supervised_correlation_clustering/: SemiSupervised2CCSolver.cpp  Solver2SCC.cpp
src/solvers/two_set_semi_supervised_correlation_clustering/: SetSemiSupervised2CCSolver.cpp
(+66 files in other folders)
